added healthcheck
